// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parser converts captions into WebVTT format 1`] = `
"WEBVTT

1
00:05:25.000 --> 00:05:35.000
[WAKI] I am a priest living at Urin-in in Murasakino,

2
00:03:59.000 --> 00:04:04.000
I am in the service of the Emperor Ichijo."
`;

exports[`parser converts captions into WebVTT format 2`] = `
"WEBVTT

1
00:05:25.000 --> 00:05:35.000
[WAKI] Kore wa miyako kitayama Murasakino

2
00:03:59.000 --> 00:04:04.000
Ichijō-no-In ni tsukae tatematsuru."
`;

exports[`parser converts captions into WebVTT format 3`] = `
"WEBVTT

1
00:05:25.000 --> 00:05:35.000
<c.transcription>undefined</c>
<c.translation>([WAKI] I am a priest living at Urin-in in Murasakino,)</c>

2
00:03:59.000 --> 00:04:04.000
<c.transcription>undefined</c>
<c.translation>(I am in the service of the Emperor Ichijo.)</c>"
`;

exports[`parser downloadCSV downloads data from a captions CSV URL 1`] = `
{
  "data": [
    [
      "Start time",
      "End time",
      "Translation",
      "Transcription",
      "Japanese",
    ],
    [
      "5'25"",
      "5'35"",
      "[WAKI] I am a priest living at Urin-in in Murasakino",
      "[WAKI] Kore wa miyako kitayama Murasakino",
      "［ワキ］是は都北山紫野",
    ],
    [
      "3'59"",
      "4'04"",
      "I am in the service of the Emperor Ichijo.",
      "Ichijō-no-In ni tsukae tatematsuru.",
      "一條の院に仕へ奉る。",
    ],
  ],
  "errors": [],
  "meta": {
    "aborted": false,
    "cursor": 287,
    "delimiter": ",",
    "linebreak": "
",
    "renamedHeaders": null,
    "truncated": false,
  },
}
`;

exports[`parser downloadCSV downloads data from a metadata CSV URL 1`] = `
{
  "data": [
    [
      "",
      "Present",
      "Number",
      "Value",
      "Notes (These will be ignored during parsing)",
    ],
    [
      "Play",
      "",
      "",
      "kokaji",
      "",
    ],
    [
      "Section Name",
      "",
      "",
      "Ageuta-3",
      "",
    ],
    [
      "Start Time",
      "",
      "",
      "30'05"",
      "",
    ],
    [
      "End Time",
      "",
      "",
      "31'19"",
      "",
    ],
    [
      "Intensity",
      "",
      "-",
      "",
      "",
    ],
    [
      "Number Voices (0,1,2)",
      "",
      "2",
      "Jiutai",
      "",
    ],
    [
      "Voice (Spoken - Sung (Tsu/Yo))",
      "",
      "",
      "Sung - Tsuyogin",
      "",
    ],
    [
      "Text (Rhythmic Setting)",
      "",
      "",
      "Congruent - Hiranori",
      "",
    ],
    [
      "Number of Percussion (0,2,3)",
      "",
      "2",
      "Otsuzumi + Kotsuzumi",
      "",
    ],
    [
      "Percussion (Congruent or not)",
      "",
      "",
      "Congruent",
      "",
    ],
    [
      "Nokhan Present?",
      "No",
      "",
      "",
      "",
    ],
    [
      "Dance Present?",
      "Yes",
      "",
      "Feminine to Martial style",
      "",
    ],
  ],
  "errors": [],
  "meta": {
    "aborted": false,
    "cursor": 468,
    "delimiter": ",",
    "linebreak": "
",
    "renamedHeaders": null,
    "truncated": false,
  },
}
`;

exports[`parser downloadCSV downloads data from a phrases CSV URL 1`] = `
{
  "data": [
    [
      "Section Name",
      "Ageuta-3",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "Phrase",
      "1",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "Start Time",
      "30'05"",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "Beat",
      "",
      "",
      "1",
      "",
      "2",
      "",
      "3",
      "",
      "4",
      "",
      "5",
      "",
      "6",
      "",
      "7",
      "",
      "8",
      "",
      "",
    ],
    [
      "Syllable Text",
      "",
      "",
      "",
      "",
      "tsu",
      "u",
      "",
      "ri",
      "ki",
      "no",
      "",
      "mi",
      "wo",
      "he",
      "n",
      "ji",
      "(i)",
      "",
      "",
    ],
    [
      "Syllable Number",
      "",
      "",
      "",
      "",
      "1",
      "2",
      "",
      "3",
      "4",
      "5",
      "",
      "1",
      "2",
      "3",
      "4",
      "5",
      "",
      "",
      "",
    ],
    [
      "Text",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "Vocal Range",
      "high",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "Percussion",
      "tsuzuke",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "Nohkan",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "Dance",
      "Feminine style",
      "",
      "",
      "",
      "",
      "",
      "",
      "9. Kneeling, turns to face front. ",
      "",
      "",
      "",
      "",
      "$",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "Phrase",
      "2",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "Start Time",
      "30'14"",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "Beat",
      "",
      "",
      "1",
      "",
      "2",
      "",
      "3",
      "",
      "4",
      "",
      "5",
      "",
      "6",
      "",
      "7",
      "",
      "8",
      "",
      "",
    ],
    [
      "Syllable Text",
      "",
      "",
      "",
      "",
      "tsu",
      "u",
      "",
      "ri",
      "ki",
      "no",
      "",
      "mi",
      "wo",
      "he",
      "",
      "n",
      "ji",
      "",
      "",
    ],
    [
      "Syllable Number",
      "",
      "",
      "",
      "",
      "1",
      "2",
      "",
      "3",
      "4",
      "5",
      "",
      "1",
      "2",
      "3",
      "",
      "4",
      "5",
      "",
      "",
    ],
    [
      "Text",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "Vocal Range",
      "high",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "Percussion",
      "tsuzuke",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "Nohkan",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "Dance",
      "",
      "",
      "",
      "",
      "",
      "",
      "9. Turns to face the waki.",
      "",
      "",
      "",
      "$",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
    [
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
      "",
    ],
  ],
  "errors": [],
  "meta": {
    "aborted": false,
    "cursor": 904,
    "delimiter": ",",
    "linebreak": "
",
    "renamedHeaders": null,
    "truncated": false,
  },
}
`;

exports[`parser extractRows extracts and formats content for a series of rows 1`] = `
{
  "beat": {
    "grid": [
      {
        "length": 1,
        "start": 1,
        "style": "normal",
        "text": "1",
        "voices": [],
      },
      {
        "length": 1,
        "start": 3,
        "style": "normal",
        "text": "2",
        "voices": [],
      },
      {
        "length": 1,
        "start": 5,
        "style": "normal",
        "text": "3",
        "voices": [],
      },
      {
        "length": 1,
        "start": 7,
        "style": "normal",
        "text": "4",
        "voices": [],
      },
      {
        "length": 1,
        "start": 9,
        "style": "normal",
        "text": "5",
        "voices": [],
      },
      {
        "length": 1,
        "start": 11,
        "style": "normal",
        "text": "6",
        "voices": [],
      },
      {
        "length": 1,
        "start": 13,
        "style": "normal",
        "text": "7",
        "voices": [],
      },
      {
        "length": 1,
        "start": 15,
        "style": "normal",
        "text": "8",
        "voices": [],
      },
    ],
    "value": "",
  },
  "dance": {
    "grid": [
      {
        "length": 4,
        "start": 2,
        "style": "normal",
        "text": "2. Open-retreat.",
        "voices": [],
      },
      {
        "length": 6,
        "start": 8,
        "style": "normal",
        "text": "1. R. Step pivot facing bridge.",
        "voices": [],
      },
    ],
    "value": "",
  },
  "nohkan": {
    "grid": [
      {
        "length": 3,
        "start": 15,
        "style": "normal",
        "text": "Hishigi",
        "voices": [],
      },
    ],
    "value": "",
  },
  "percussion": {
    "grid": [],
    "value": "tome",
  },
  "startTime": {
    "grid": [],
    "value": 1860,
  },
  "syllableNumber": {
    "grid": [
      {
        "length": 1,
        "start": 0,
        "style": "normal",
        "text": "1",
        "voices": [],
      },
      {
        "length": 1,
        "start": 1,
        "style": "normal",
        "text": "2",
        "voices": [],
      },
      {
        "length": 1,
        "start": 2,
        "style": "normal",
        "text": "3",
        "voices": [],
      },
      {
        "length": 1,
        "start": 3,
        "style": "normal",
        "text": "4",
        "voices": [],
      },
      {
        "length": 1,
        "start": 6,
        "style": "normal",
        "text": "5",
        "voices": [],
      },
      {
        "length": 1,
        "start": 7,
        "style": "normal",
        "text": "6",
        "voices": [],
      },
      {
        "length": 1,
        "start": 8,
        "style": "normal",
        "text": "7",
        "voices": [],
      },
      {
        "length": 1,
        "start": 10,
        "style": "normal",
        "text": "1",
        "voices": [],
      },
      {
        "length": 1,
        "start": 11,
        "style": "normal",
        "text": "2",
        "voices": [],
      },
      {
        "length": 1,
        "start": 12,
        "style": "normal",
        "text": "3",
        "voices": [],
      },
      {
        "length": 1,
        "start": 13,
        "style": "normal",
        "text": "4",
        "voices": [],
      },
      {
        "length": 1,
        "start": 15,
        "style": "normal",
        "text": "5",
        "voices": [],
      },
    ],
    "value": "",
  },
  "syllableText": {
    "grid": [
      {
        "length": 1,
        "start": 0,
        "style": "normal",
        "text": "yu",
        "voices": [],
      },
      {
        "length": 1,
        "start": 1,
        "style": "normal",
        "text": "ku",
        "voices": [],
      },
      {
        "length": 1,
        "start": 2,
        "style": "normal",
        "text": "he",
        "voices": [],
      },
      {
        "length": 1,
        "start": 3,
        "style": "normal",
        "text": "mo",
        "voices": [],
      },
      {
        "length": 1,
        "start": 4,
        "style": "normal",
        "text": "(o)",
        "voices": [],
      },
      {
        "length": 1,
        "start": 6,
        "style": "normal",
        "text": "shi",
        "voices": [],
      },
      {
        "length": 1,
        "start": 7,
        "style": "normal",
        "text": "ra",
        "voices": [],
      },
      {
        "length": 1,
        "start": 8,
        "style": "normal",
        "text": "zu",
        "voices": [],
      },
      {
        "length": 1,
        "start": 10,
        "style": "normal",
        "text": "u",
        "voices": [],
      },
      {
        "length": 1,
        "start": 11,
        "style": "normal",
        "text": "se",
        "voices": [],
      },
      {
        "length": 1,
        "start": 12,
        "style": "normal",
        "text": "ni",
        "voices": [],
      },
      {
        "length": 1,
        "start": 13,
        "style": "normal",
        "text": "ke",
        "voices": [],
      },
      {
        "length": 1,
        "start": 15,
        "style": "normal",
        "text": "ri",
        "voices": [],
      },
    ],
    "value": "",
  },
  "text": {
    "grid": [],
    "value": "",
  },
  "vocalRange": {
    "grid": [],
    "value": "high",
  },
}
`;

exports[`parser main downloads and parses phrases, metadata, and captions 1`] = `
"{
  "play": {
    "value": "kokaji"
  },
  "sectionName": {
    "value": "Ageuta-3"
  },
  "startTime": {
    "value": 1805
  },
  "endTime": {
    "value": 1879
  },
  "intensity": {
    "number": "-"
  },
  "numberVoices": {
    "number": "2",
    "value": "Jiutai"
  },
  "voice": {
    "value": "Sung - Tsuyogin"
  },
  "text": {
    "value": "Congruent - Hiranori"
  },
  "numberOfPercussion": {
    "number": "2",
    "value": "Otsuzumi + Kotsuzumi"
  },
  "percussion": {
    "value": "Congruent"
  },
  "nokhanPresent": {
    "present": "No"
  },
  "dancePresent": {
    "present": "Yes",
    "value": "Feminine to Martial style"
  },
  "playUrl": "/kokaji/",
  "sectionUrl": "/kokaji/ageuta-1/",
  "videoUrl": {},
  "videoDuration": {},
  "phrases": [
    {
      "startTime": {
        "value": 1805,
        "grid": []
      },
      "beat": {
        "value": "",
        "grid": [
          {
            "text": "1",
            "voices": [],
            "start": 1,
            "style": "normal",
            "length": 1
          },
          {
            "text": "2",
            "voices": [],
            "start": 3,
            "style": "normal",
            "length": 1
          },
          {
            "text": "3",
            "voices": [],
            "start": 5,
            "style": "normal",
            "length": 1
          },
          {
            "text": "4",
            "voices": [],
            "start": 7,
            "style": "normal",
            "length": 1
          },
          {
            "text": "5",
            "voices": [],
            "start": 9,
            "style": "normal",
            "length": 1
          },
          {
            "text": "6",
            "voices": [],
            "start": 11,
            "style": "normal",
            "length": 1
          },
          {
            "text": "7",
            "voices": [],
            "start": 13,
            "style": "normal",
            "length": 1
          },
          {
            "text": "8",
            "voices": [],
            "start": 15,
            "style": "normal",
            "length": 1
          }
        ]
      },
      "syllableText": {
        "value": "",
        "grid": [
          {
            "text": "tsu",
            "voices": [],
            "start": 3,
            "style": "normal",
            "length": 1
          },
          {
            "text": "u",
            "voices": [],
            "start": 4,
            "style": "normal",
            "length": 1
          },
          {
            "text": "ri",
            "voices": [],
            "start": 6,
            "style": "normal",
            "length": 1
          },
          {
            "text": "ki",
            "voices": [],
            "start": 7,
            "style": "normal",
            "length": 1
          },
          {
            "text": "no",
            "voices": [],
            "start": 8,
            "style": "normal",
            "length": 1
          },
          {
            "text": "mi",
            "voices": [],
            "start": 10,
            "style": "normal",
            "length": 1
          },
          {
            "text": "wo",
            "voices": [],
            "start": 11,
            "style": "normal",
            "length": 1
          },
          {
            "text": "he",
            "voices": [],
            "start": 12,
            "style": "normal",
            "length": 1
          },
          {
            "text": "n",
            "voices": [],
            "start": 13,
            "style": "normal",
            "length": 1
          },
          {
            "text": "ji",
            "voices": [],
            "start": 14,
            "style": "normal",
            "length": 1
          },
          {
            "text": "(i)",
            "voices": [],
            "start": 15,
            "style": "normal",
            "length": 1
          }
        ]
      },
      "syllableNumber": {
        "value": "",
        "grid": [
          {
            "text": "1",
            "voices": [],
            "start": 3,
            "style": "normal",
            "length": 1
          },
          {
            "text": "2",
            "voices": [],
            "start": 4,
            "style": "normal",
            "length": 1
          },
          {
            "text": "3",
            "voices": [],
            "start": 6,
            "style": "normal",
            "length": 1
          },
          {
            "text": "4",
            "voices": [],
            "start": 7,
            "style": "normal",
            "length": 1
          },
          {
            "text": "5",
            "voices": [],
            "start": 8,
            "style": "normal",
            "length": 1
          },
          {
            "text": "1",
            "voices": [],
            "start": 10,
            "style": "normal",
            "length": 1
          },
          {
            "text": "2",
            "voices": [],
            "start": 11,
            "style": "normal",
            "length": 1
          },
          {
            "text": "3",
            "voices": [],
            "start": 12,
            "style": "normal",
            "length": 1
          },
          {
            "text": "4",
            "voices": [],
            "start": 13,
            "style": "normal",
            "length": 1
          },
          {
            "text": "5",
            "voices": [],
            "start": 14,
            "style": "normal",
            "length": 1
          }
        ]
      },
      "text": {
        "value": "",
        "grid": []
      },
      "vocalRange": {
        "value": "high",
        "grid": []
      },
      "percussion": {
        "value": "tsuzuke",
        "grid": []
      },
      "nohkan": {
        "value": "",
        "grid": []
      },
      "phrase": "1"
    },
    {
      "startTime": {
        "value": 1814,
        "grid": []
      },
      "beat": {
        "value": "",
        "grid": [
          {
            "text": "1",
            "voices": [],
            "start": 1,
            "style": "normal",
            "length": 1
          },
          {
            "text": "2",
            "voices": [],
            "start": 3,
            "style": "normal",
            "length": 1
          },
          {
            "text": "3",
            "voices": [],
            "start": 5,
            "style": "normal",
            "length": 1
          },
          {
            "text": "4",
            "voices": [],
            "start": 7,
            "style": "normal",
            "length": 1
          },
          {
            "text": "5",
            "voices": [],
            "start": 9,
            "style": "normal",
            "length": 1
          },
          {
            "text": "6",
            "voices": [],
            "start": 11,
            "style": "normal",
            "length": 1
          },
          {
            "text": "7",
            "voices": [],
            "start": 13,
            "style": "normal",
            "length": 1
          },
          {
            "text": "8",
            "voices": [],
            "start": 15,
            "style": "normal",
            "length": 1
          }
        ]
      },
      "syllableText": {
        "value": "",
        "grid": [
          {
            "text": "tsu",
            "voices": [],
            "start": 3,
            "style": "normal",
            "length": 1
          },
          {
            "text": "u",
            "voices": [],
            "start": 4,
            "style": "normal",
            "length": 1
          },
          {
            "text": "ri",
            "voices": [],
            "start": 6,
            "style": "normal",
            "length": 1
          },
          {
            "text": "ki",
            "voices": [],
            "start": 7,
            "style": "normal",
            "length": 1
          },
          {
            "text": "no",
            "voices": [],
            "start": 8,
            "style": "normal",
            "length": 1
          },
          {
            "text": "mi",
            "voices": [],
            "start": 10,
            "style": "normal",
            "length": 1
          },
          {
            "text": "wo",
            "voices": [],
            "start": 11,
            "style": "normal",
            "length": 1
          },
          {
            "text": "he",
            "voices": [],
            "start": 12,
            "style": "normal",
            "length": 1
          },
          {
            "text": "n",
            "voices": [],
            "start": 14,
            "style": "normal",
            "length": 1
          },
          {
            "text": "ji",
            "voices": [],
            "start": 15,
            "style": "normal",
            "length": 1
          }
        ]
      },
      "syllableNumber": {
        "value": "",
        "grid": [
          {
            "text": "1",
            "voices": [],
            "start": 3,
            "style": "normal",
            "length": 1
          },
          {
            "text": "2",
            "voices": [],
            "start": 4,
            "style": "normal",
            "length": 1
          },
          {
            "text": "3",
            "voices": [],
            "start": 6,
            "style": "normal",
            "length": 1
          },
          {
            "text": "4",
            "voices": [],
            "start": 7,
            "style": "normal",
            "length": 1
          },
          {
            "text": "5",
            "voices": [],
            "start": 8,
            "style": "normal",
            "length": 1
          },
          {
            "text": "1",
            "voices": [],
            "start": 10,
            "style": "normal",
            "length": 1
          },
          {
            "text": "2",
            "voices": [],
            "start": 11,
            "style": "normal",
            "length": 1
          },
          {
            "text": "3",
            "voices": [],
            "start": 12,
            "style": "normal",
            "length": 1
          },
          {
            "text": "4",
            "voices": [],
            "start": 14,
            "style": "normal",
            "length": 1
          },
          {
            "text": "5",
            "voices": [],
            "start": 15,
            "style": "normal",
            "length": 1
          }
        ]
      },
      "text": {
        "value": "",
        "grid": []
      },
      "vocalRange": {
        "value": "high",
        "grid": []
      },
      "percussion": {
        "value": "tsuzuke",
        "grid": []
      },
      "nohkan": {
        "value": "",
        "grid": []
      },
      "phrase": "2"
    }
  ],
  "captions": [
    {
      "startTime": 325,
      "endTime": 335,
      "translation": "[WAKI] I am a priest living at Urin-in in Murasakino",
      "transcription": "[WAKI] Kore wa miyako kitayama Murasakino",
      "japanese": "［ワキ］是は都北山紫野"
    },
    {
      "startTime": 239,
      "endTime": 244,
      "translation": "I am in the service of the Emperor Ichijo.",
      "transcription": "Ichijō-no-In ni tsukae tatematsuru.",
      "japanese": "一條の院に仕へ奉る。"
    }
  ],
  "narrative": {
    "value": "/kokaji/narratives/ageuta-1.html"
  }
}"
`;

exports[`parser main downloads and parses phrases, metadata, and captions 2`] = `
"{
  "play": {
    "value": "kokaji"
  },
  "sectionName": {
    "value": "Ageuta-3"
  },
  "startTime": {
    "value": 1805
  },
  "endTime": {
    "value": 1879
  },
  "intensity": {
    "number": "-"
  },
  "numberVoices": {
    "number": "2",
    "value": "Jiutai"
  },
  "voice": {
    "value": "Sung - Tsuyogin"
  },
  "text": {
    "value": "Congruent - Hiranori"
  },
  "numberOfPercussion": {
    "number": "2",
    "value": "Otsuzumi + Kotsuzumi"
  },
  "percussion": {
    "value": "Congruent"
  },
  "nokhanPresent": {
    "present": "No"
  },
  "dancePresent": {
    "present": "Yes",
    "value": "Feminine to Martial style"
  },
  "playUrl": "/kokaji/",
  "sectionUrl": "/kokaji/ageuta-2/",
  "videoUrl": {},
  "videoDuration": {},
  "phrases": [
    {
      "startTime": {
        "value": 1805,
        "grid": []
      },
      "beat": {
        "value": "",
        "grid": [
          {
            "text": "1",
            "voices": [],
            "start": 1,
            "style": "normal",
            "length": 1
          },
          {
            "text": "2",
            "voices": [],
            "start": 3,
            "style": "normal",
            "length": 1
          },
          {
            "text": "3",
            "voices": [],
            "start": 5,
            "style": "normal",
            "length": 1
          },
          {
            "text": "4",
            "voices": [],
            "start": 7,
            "style": "normal",
            "length": 1
          },
          {
            "text": "5",
            "voices": [],
            "start": 9,
            "style": "normal",
            "length": 1
          },
          {
            "text": "6",
            "voices": [],
            "start": 11,
            "style": "normal",
            "length": 1
          },
          {
            "text": "7",
            "voices": [],
            "start": 13,
            "style": "normal",
            "length": 1
          },
          {
            "text": "8",
            "voices": [],
            "start": 15,
            "style": "normal",
            "length": 1
          }
        ]
      },
      "syllableText": {
        "value": "",
        "grid": [
          {
            "text": "tsu",
            "voices": [],
            "start": 3,
            "style": "normal",
            "length": 1
          },
          {
            "text": "u",
            "voices": [],
            "start": 4,
            "style": "normal",
            "length": 1
          },
          {
            "text": "ri",
            "voices": [],
            "start": 6,
            "style": "normal",
            "length": 1
          },
          {
            "text": "ki",
            "voices": [],
            "start": 7,
            "style": "normal",
            "length": 1
          },
          {
            "text": "no",
            "voices": [],
            "start": 8,
            "style": "normal",
            "length": 1
          },
          {
            "text": "mi",
            "voices": [],
            "start": 10,
            "style": "normal",
            "length": 1
          },
          {
            "text": "wo",
            "voices": [],
            "start": 11,
            "style": "normal",
            "length": 1
          },
          {
            "text": "he",
            "voices": [],
            "start": 12,
            "style": "normal",
            "length": 1
          },
          {
            "text": "n",
            "voices": [],
            "start": 13,
            "style": "normal",
            "length": 1
          },
          {
            "text": "ji",
            "voices": [],
            "start": 14,
            "style": "normal",
            "length": 1
          },
          {
            "text": "(i)",
            "voices": [],
            "start": 15,
            "style": "normal",
            "length": 1
          }
        ]
      },
      "syllableNumber": {
        "value": "",
        "grid": [
          {
            "text": "1",
            "voices": [],
            "start": 3,
            "style": "normal",
            "length": 1
          },
          {
            "text": "2",
            "voices": [],
            "start": 4,
            "style": "normal",
            "length": 1
          },
          {
            "text": "3",
            "voices": [],
            "start": 6,
            "style": "normal",
            "length": 1
          },
          {
            "text": "4",
            "voices": [],
            "start": 7,
            "style": "normal",
            "length": 1
          },
          {
            "text": "5",
            "voices": [],
            "start": 8,
            "style": "normal",
            "length": 1
          },
          {
            "text": "1",
            "voices": [],
            "start": 10,
            "style": "normal",
            "length": 1
          },
          {
            "text": "2",
            "voices": [],
            "start": 11,
            "style": "normal",
            "length": 1
          },
          {
            "text": "3",
            "voices": [],
            "start": 12,
            "style": "normal",
            "length": 1
          },
          {
            "text": "4",
            "voices": [],
            "start": 13,
            "style": "normal",
            "length": 1
          },
          {
            "text": "5",
            "voices": [],
            "start": 14,
            "style": "normal",
            "length": 1
          }
        ]
      },
      "text": {
        "value": "",
        "grid": []
      },
      "vocalRange": {
        "value": "high",
        "grid": []
      },
      "percussion": {
        "value": "tsuzuke",
        "grid": []
      },
      "nohkan": {
        "value": "",
        "grid": []
      },
      "phrase": "1"
    },
    {
      "startTime": {
        "value": 1814,
        "grid": []
      },
      "beat": {
        "value": "",
        "grid": [
          {
            "text": "1",
            "voices": [],
            "start": 1,
            "style": "normal",
            "length": 1
          },
          {
            "text": "2",
            "voices": [],
            "start": 3,
            "style": "normal",
            "length": 1
          },
          {
            "text": "3",
            "voices": [],
            "start": 5,
            "style": "normal",
            "length": 1
          },
          {
            "text": "4",
            "voices": [],
            "start": 7,
            "style": "normal",
            "length": 1
          },
          {
            "text": "5",
            "voices": [],
            "start": 9,
            "style": "normal",
            "length": 1
          },
          {
            "text": "6",
            "voices": [],
            "start": 11,
            "style": "normal",
            "length": 1
          },
          {
            "text": "7",
            "voices": [],
            "start": 13,
            "style": "normal",
            "length": 1
          },
          {
            "text": "8",
            "voices": [],
            "start": 15,
            "style": "normal",
            "length": 1
          }
        ]
      },
      "syllableText": {
        "value": "",
        "grid": [
          {
            "text": "tsu",
            "voices": [],
            "start": 3,
            "style": "normal",
            "length": 1
          },
          {
            "text": "u",
            "voices": [],
            "start": 4,
            "style": "normal",
            "length": 1
          },
          {
            "text": "ri",
            "voices": [],
            "start": 6,
            "style": "normal",
            "length": 1
          },
          {
            "text": "ki",
            "voices": [],
            "start": 7,
            "style": "normal",
            "length": 1
          },
          {
            "text": "no",
            "voices": [],
            "start": 8,
            "style": "normal",
            "length": 1
          },
          {
            "text": "mi",
            "voices": [],
            "start": 10,
            "style": "normal",
            "length": 1
          },
          {
            "text": "wo",
            "voices": [],
            "start": 11,
            "style": "normal",
            "length": 1
          },
          {
            "text": "he",
            "voices": [],
            "start": 12,
            "style": "normal",
            "length": 1
          },
          {
            "text": "n",
            "voices": [],
            "start": 14,
            "style": "normal",
            "length": 1
          },
          {
            "text": "ji",
            "voices": [],
            "start": 15,
            "style": "normal",
            "length": 1
          }
        ]
      },
      "syllableNumber": {
        "value": "",
        "grid": [
          {
            "text": "1",
            "voices": [],
            "start": 3,
            "style": "normal",
            "length": 1
          },
          {
            "text": "2",
            "voices": [],
            "start": 4,
            "style": "normal",
            "length": 1
          },
          {
            "text": "3",
            "voices": [],
            "start": 6,
            "style": "normal",
            "length": 1
          },
          {
            "text": "4",
            "voices": [],
            "start": 7,
            "style": "normal",
            "length": 1
          },
          {
            "text": "5",
            "voices": [],
            "start": 8,
            "style": "normal",
            "length": 1
          },
          {
            "text": "1",
            "voices": [],
            "start": 10,
            "style": "normal",
            "length": 1
          },
          {
            "text": "2",
            "voices": [],
            "start": 11,
            "style": "normal",
            "length": 1
          },
          {
            "text": "3",
            "voices": [],
            "start": 12,
            "style": "normal",
            "length": 1
          },
          {
            "text": "4",
            "voices": [],
            "start": 14,
            "style": "normal",
            "length": 1
          },
          {
            "text": "5",
            "voices": [],
            "start": 15,
            "style": "normal",
            "length": 1
          }
        ]
      },
      "text": {
        "value": "",
        "grid": []
      },
      "vocalRange": {
        "value": "high",
        "grid": []
      },
      "percussion": {
        "value": "tsuzuke",
        "grid": []
      },
      "nohkan": {
        "value": "",
        "grid": []
      },
      "phrase": "2"
    }
  ],
  "captions": [],
  "narrative": {
    "value": "/kokaji/narratives/ageuta-2.html"
  }
}"
`;

exports[`parser main downloads and parses phrases, metadata, and captions 3`] = `
"{
  "play": {
    "value": "kokaji"
  },
  "sectionName": {
    "value": "Ageuta-3"
  },
  "startTime": {
    "value": 1805
  },
  "endTime": {
    "value": 1879
  },
  "intensity": {
    "number": "-"
  },
  "numberVoices": {
    "number": "2",
    "value": "Jiutai"
  },
  "voice": {
    "value": "Sung - Tsuyogin"
  },
  "text": {
    "value": "Congruent - Hiranori"
  },
  "numberOfPercussion": {
    "number": "2",
    "value": "Otsuzumi + Kotsuzumi"
  },
  "percussion": {
    "value": "Congruent"
  },
  "nokhanPresent": {
    "present": "No"
  },
  "dancePresent": {
    "present": "Yes",
    "value": "Feminine to Martial style"
  },
  "playUrl": "/kokaji/",
  "sectionUrl": "/kokaji/ageuta-3/",
  "videoUrl": {},
  "videoDuration": {},
  "phrases": [
    {
      "startTime": {
        "value": 1805,
        "grid": []
      },
      "beat": {
        "value": "",
        "grid": [
          {
            "text": "1",
            "voices": [],
            "start": 1,
            "style": "normal",
            "length": 1
          },
          {
            "text": "2",
            "voices": [],
            "start": 3,
            "style": "normal",
            "length": 1
          },
          {
            "text": "3",
            "voices": [],
            "start": 5,
            "style": "normal",
            "length": 1
          },
          {
            "text": "4",
            "voices": [],
            "start": 7,
            "style": "normal",
            "length": 1
          },
          {
            "text": "5",
            "voices": [],
            "start": 9,
            "style": "normal",
            "length": 1
          },
          {
            "text": "6",
            "voices": [],
            "start": 11,
            "style": "normal",
            "length": 1
          },
          {
            "text": "7",
            "voices": [],
            "start": 13,
            "style": "normal",
            "length": 1
          },
          {
            "text": "8",
            "voices": [],
            "start": 15,
            "style": "normal",
            "length": 1
          }
        ]
      },
      "syllableText": {
        "value": "",
        "grid": [
          {
            "text": "tsu",
            "voices": [],
            "start": 3,
            "style": "normal",
            "length": 1
          },
          {
            "text": "u",
            "voices": [],
            "start": 4,
            "style": "normal",
            "length": 1
          },
          {
            "text": "ri",
            "voices": [],
            "start": 6,
            "style": "normal",
            "length": 1
          },
          {
            "text": "ki",
            "voices": [],
            "start": 7,
            "style": "normal",
            "length": 1
          },
          {
            "text": "no",
            "voices": [],
            "start": 8,
            "style": "normal",
            "length": 1
          },
          {
            "text": "mi",
            "voices": [],
            "start": 10,
            "style": "normal",
            "length": 1
          },
          {
            "text": "wo",
            "voices": [],
            "start": 11,
            "style": "normal",
            "length": 1
          },
          {
            "text": "he",
            "voices": [],
            "start": 12,
            "style": "normal",
            "length": 1
          },
          {
            "text": "n",
            "voices": [],
            "start": 13,
            "style": "normal",
            "length": 1
          },
          {
            "text": "ji",
            "voices": [],
            "start": 14,
            "style": "normal",
            "length": 1
          },
          {
            "text": "(i)",
            "voices": [],
            "start": 15,
            "style": "normal",
            "length": 1
          }
        ]
      },
      "syllableNumber": {
        "value": "",
        "grid": [
          {
            "text": "1",
            "voices": [],
            "start": 3,
            "style": "normal",
            "length": 1
          },
          {
            "text": "2",
            "voices": [],
            "start": 4,
            "style": "normal",
            "length": 1
          },
          {
            "text": "3",
            "voices": [],
            "start": 6,
            "style": "normal",
            "length": 1
          },
          {
            "text": "4",
            "voices": [],
            "start": 7,
            "style": "normal",
            "length": 1
          },
          {
            "text": "5",
            "voices": [],
            "start": 8,
            "style": "normal",
            "length": 1
          },
          {
            "text": "1",
            "voices": [],
            "start": 10,
            "style": "normal",
            "length": 1
          },
          {
            "text": "2",
            "voices": [],
            "start": 11,
            "style": "normal",
            "length": 1
          },
          {
            "text": "3",
            "voices": [],
            "start": 12,
            "style": "normal",
            "length": 1
          },
          {
            "text": "4",
            "voices": [],
            "start": 13,
            "style": "normal",
            "length": 1
          },
          {
            "text": "5",
            "voices": [],
            "start": 14,
            "style": "normal",
            "length": 1
          }
        ]
      },
      "text": {
        "value": "",
        "grid": []
      },
      "vocalRange": {
        "value": "high",
        "grid": []
      },
      "percussion": {
        "value": "tsuzuke",
        "grid": []
      },
      "nohkan": {
        "value": "",
        "grid": []
      },
      "phrase": "1"
    },
    {
      "startTime": {
        "value": 1814,
        "grid": []
      },
      "beat": {
        "value": "",
        "grid": [
          {
            "text": "1",
            "voices": [],
            "start": 1,
            "style": "normal",
            "length": 1
          },
          {
            "text": "2",
            "voices": [],
            "start": 3,
            "style": "normal",
            "length": 1
          },
          {
            "text": "3",
            "voices": [],
            "start": 5,
            "style": "normal",
            "length": 1
          },
          {
            "text": "4",
            "voices": [],
            "start": 7,
            "style": "normal",
            "length": 1
          },
          {
            "text": "5",
            "voices": [],
            "start": 9,
            "style": "normal",
            "length": 1
          },
          {
            "text": "6",
            "voices": [],
            "start": 11,
            "style": "normal",
            "length": 1
          },
          {
            "text": "7",
            "voices": [],
            "start": 13,
            "style": "normal",
            "length": 1
          },
          {
            "text": "8",
            "voices": [],
            "start": 15,
            "style": "normal",
            "length": 1
          }
        ]
      },
      "syllableText": {
        "value": "",
        "grid": [
          {
            "text": "tsu",
            "voices": [],
            "start": 3,
            "style": "normal",
            "length": 1
          },
          {
            "text": "u",
            "voices": [],
            "start": 4,
            "style": "normal",
            "length": 1
          },
          {
            "text": "ri",
            "voices": [],
            "start": 6,
            "style": "normal",
            "length": 1
          },
          {
            "text": "ki",
            "voices": [],
            "start": 7,
            "style": "normal",
            "length": 1
          },
          {
            "text": "no",
            "voices": [],
            "start": 8,
            "style": "normal",
            "length": 1
          },
          {
            "text": "mi",
            "voices": [],
            "start": 10,
            "style": "normal",
            "length": 1
          },
          {
            "text": "wo",
            "voices": [],
            "start": 11,
            "style": "normal",
            "length": 1
          },
          {
            "text": "he",
            "voices": [],
            "start": 12,
            "style": "normal",
            "length": 1
          },
          {
            "text": "n",
            "voices": [],
            "start": 14,
            "style": "normal",
            "length": 1
          },
          {
            "text": "ji",
            "voices": [],
            "start": 15,
            "style": "normal",
            "length": 1
          }
        ]
      },
      "syllableNumber": {
        "value": "",
        "grid": [
          {
            "text": "1",
            "voices": [],
            "start": 3,
            "style": "normal",
            "length": 1
          },
          {
            "text": "2",
            "voices": [],
            "start": 4,
            "style": "normal",
            "length": 1
          },
          {
            "text": "3",
            "voices": [],
            "start": 6,
            "style": "normal",
            "length": 1
          },
          {
            "text": "4",
            "voices": [],
            "start": 7,
            "style": "normal",
            "length": 1
          },
          {
            "text": "5",
            "voices": [],
            "start": 8,
            "style": "normal",
            "length": 1
          },
          {
            "text": "1",
            "voices": [],
            "start": 10,
            "style": "normal",
            "length": 1
          },
          {
            "text": "2",
            "voices": [],
            "start": 11,
            "style": "normal",
            "length": 1
          },
          {
            "text": "3",
            "voices": [],
            "start": 12,
            "style": "normal",
            "length": 1
          },
          {
            "text": "4",
            "voices": [],
            "start": 14,
            "style": "normal",
            "length": 1
          },
          {
            "text": "5",
            "voices": [],
            "start": 15,
            "style": "normal",
            "length": 1
          }
        ]
      },
      "text": {
        "value": "",
        "grid": []
      },
      "vocalRange": {
        "value": "high",
        "grid": []
      },
      "percussion": {
        "value": "tsuzuke",
        "grid": []
      },
      "nohkan": {
        "value": "",
        "grid": []
      },
      "phrase": "2"
    }
  ],
  "captions": [],
  "narrative": {
    "value": "/kokaji/narratives/ageuta-3.html"
  }
}"
`;

exports[`parser main downloads and parses phrases, metadata, and captions 4`] = `
"{
  "play": {
    "value": "kokaji"
  },
  "sectionName": {
    "value": "Ageuta-3"
  },
  "startTime": {
    "value": 1805
  },
  "endTime": {
    "value": 1879
  },
  "intensity": {
    "number": "-"
  },
  "numberVoices": {
    "number": "2",
    "value": "Jiutai"
  },
  "voice": {
    "value": "Sung - Tsuyogin"
  },
  "text": {
    "value": "Congruent - Hiranori"
  },
  "numberOfPercussion": {
    "number": "2",
    "value": "Otsuzumi + Kotsuzumi"
  },
  "percussion": {
    "value": "Congruent"
  },
  "nokhanPresent": {
    "present": "No"
  },
  "dancePresent": {
    "present": "Yes",
    "value": "Feminine to Martial style"
  },
  "playUrl": "/kokaji/",
  "sectionUrl": "/kokaji/ageuta-4/",
  "videoUrl": {},
  "videoDuration": {},
  "phrases": [],
  "captions": [],
  "narrative": {
    "value": "/kokaji/narratives/ageuta-4.html"
  }
}"
`;

exports[`parser main downloads and parses phrases, metadata, and captions 5`] = `
"WEBVTT

1
00:05:25.000 --> 00:05:35.000
[WAKI] I am a priest living at Urin-in in Murasakino

2
00:03:59.000 --> 00:04:04.000
I am in the service of the Emperor Ichijo."
`;

exports[`parser main downloads and parses phrases, metadata, and captions 6`] = `
"WEBVTT

1
00:05:25.000 --> 00:05:35.000
[WAKI] Kore wa miyako kitayama Murasakino

2
00:03:59.000 --> 00:04:04.000
Ichijō-no-In ni tsukae tatematsuru."
`;

exports[`parser main downloads and parses phrases, metadata, and captions 7`] = `
"WEBVTT

1
00:05:25.000 --> 00:05:35.000
<c.missing>- (no captions) -</c>

2
00:03:59.000 --> 00:04:04.000
<c.missing>- (no captions) -</c>"
`;

exports[`parser main downloads and parses phrases, metadata, and captions 8`] = `
"WEBVTT

1
00:05:25.000 --> 00:05:35.000
<c.transcription>undefined</c>
<c.translation>([WAKI] I am a priest living at Urin-in in Murasakino)</c>

2
00:03:59.000 --> 00:04:04.000
<c.transcription>undefined</c>
<c.translation>(I am in the service of the Emperor Ichijo.)</c>"
`;

exports[`parser main downloads and parses phrases, metadata, and captions 9`] = `
"{
  "playName": "kokaji",
  "sections": [
    {
      "play": {
        "value": "kokaji"
      },
      "sectionName": {
        "value": "Ageuta-3"
      },
      "startTime": {
        "value": 1805
      },
      "endTime": {
        "value": 1879
      },
      "intensity": {
        "number": "-"
      },
      "numberVoices": {
        "number": "2",
        "value": "Jiutai"
      },
      "voice": {
        "value": "Sung - Tsuyogin"
      },
      "text": {
        "value": "Congruent - Hiranori"
      },
      "numberOfPercussion": {
        "number": "2",
        "value": "Otsuzumi + Kotsuzumi"
      },
      "percussion": {
        "value": "Congruent"
      },
      "nokhanPresent": {
        "present": "No"
      },
      "dancePresent": {
        "present": "Yes",
        "value": "Feminine to Martial style"
      },
      "playUrl": "/kokaji/",
      "sectionUrl": "/kokaji/ageuta-1/",
      "videoUrl": {},
      "videoDuration": {},
      "narrative": {
        "value": "/kokaji/narratives/ageuta-1.html"
      }
    },
    {
      "play": {
        "value": "kokaji"
      },
      "sectionName": {
        "value": "Ageuta-3"
      },
      "startTime": {
        "value": 1805
      },
      "endTime": {
        "value": 1879
      },
      "intensity": {
        "number": "-"
      },
      "numberVoices": {
        "number": "2",
        "value": "Jiutai"
      },
      "voice": {
        "value": "Sung - Tsuyogin"
      },
      "text": {
        "value": "Congruent - Hiranori"
      },
      "numberOfPercussion": {
        "number": "2",
        "value": "Otsuzumi + Kotsuzumi"
      },
      "percussion": {
        "value": "Congruent"
      },
      "nokhanPresent": {
        "present": "No"
      },
      "dancePresent": {
        "present": "Yes",
        "value": "Feminine to Martial style"
      },
      "playUrl": "/kokaji/",
      "sectionUrl": "/kokaji/ageuta-2/",
      "videoUrl": {},
      "videoDuration": {},
      "narrative": {
        "value": "/kokaji/narratives/ageuta-2.html"
      }
    },
    {
      "play": {
        "value": "kokaji"
      },
      "sectionName": {
        "value": "Ageuta-3"
      },
      "startTime": {
        "value": 1805
      },
      "endTime": {
        "value": 1879
      },
      "intensity": {
        "number": "-"
      },
      "numberVoices": {
        "number": "2",
        "value": "Jiutai"
      },
      "voice": {
        "value": "Sung - Tsuyogin"
      },
      "text": {
        "value": "Congruent - Hiranori"
      },
      "numberOfPercussion": {
        "number": "2",
        "value": "Otsuzumi + Kotsuzumi"
      },
      "percussion": {
        "value": "Congruent"
      },
      "nokhanPresent": {
        "present": "No"
      },
      "dancePresent": {
        "present": "Yes",
        "value": "Feminine to Martial style"
      },
      "playUrl": "/kokaji/",
      "sectionUrl": "/kokaji/ageuta-3/",
      "videoUrl": {},
      "videoDuration": {},
      "narrative": {
        "value": "/kokaji/narratives/ageuta-3.html"
      }
    },
    {
      "play": {
        "value": "kokaji"
      },
      "sectionName": {
        "value": "Ageuta-3"
      },
      "startTime": {
        "value": 1805
      },
      "endTime": {
        "value": 1879
      },
      "intensity": {
        "number": "-"
      },
      "numberVoices": {
        "number": "2",
        "value": "Jiutai"
      },
      "voice": {
        "value": "Sung - Tsuyogin"
      },
      "text": {
        "value": "Congruent - Hiranori"
      },
      "numberOfPercussion": {
        "number": "2",
        "value": "Otsuzumi + Kotsuzumi"
      },
      "percussion": {
        "value": "Congruent"
      },
      "nokhanPresent": {
        "present": "No"
      },
      "dancePresent": {
        "present": "Yes",
        "value": "Feminine to Martial style"
      },
      "playUrl": "/kokaji/",
      "sectionUrl": "/kokaji/ageuta-4/",
      "videoUrl": {},
      "videoDuration": {},
      "narrative": {
        "value": "/kokaji/narratives/ageuta-4.html"
      }
    }
  ],
  "narrative": "/narratives/kokaji/",
  "tracks": [
    {
      "label": "English",
      "kind": "subtitles",
      "lang": "en",
      "url": "/data/captions/kokaji.translation.vtt"
    },
    {
      "label": "Romanization",
      "kind": "subtitles",
      "lang": "en",
      "url": "/data/captions/kokaji.transcription.vtt"
    },
    {
      "label": "Japanese",
      "kind": "subtitles",
      "lang": "en",
      "url": "/data/captions/kokaji.japaneseScript.vtt"
    },
    {
      "label": "Combined",
      "kind": "subtitles",
      "lang": "en",
      "url": "/data/captions/kokaji.combined.vtt"
    }
  ],
  "maxIntensity": 0
}"
`;

exports[`parser main writes to console when -q/--quiet is not passed in 1`] = `
[
  [
    "Downloading and parsing kokaji:",
  ],
  [
    "- ageuta-1",
  ],
  [
    "- ageuta-2",
  ],
  [
    "- ageuta-3",
  ],
  [
    "- ageuta-4",
  ],
  [
    "Writing play data:",
  ],
  [
    "- kokaji (captions)",
  ],
]
`;

exports[`parser processCaptions parses caption lines into a list of hash maps 1`] = `
[
  {
    "endTime": 335,
    "japanese": "［ワキ］是は都北山紫野",
    "startTime": 325,
    "transcription": "[WAKI] Kore wa miyako kitayama Murasakino",
    "translation": "[WAKI] I am a priest living at Urin-in in Murasakino,",
  },
  {
    "endTime": 244,
    "japanese": "一條の院に仕へ奉る。",
    "startTime": 239,
    "transcription": "Ichijō-no-In ni tsukae tatematsuru.",
    "translation": "I am in the service of the Emperor Ichijo.",
  },
]
`;

exports[`parser processMetadata turns metadata into a hash map 1`] = `
{
  "dancePresent": {
    "present": "Yes",
    "value": "Feminine to Martial style",
  },
  "endTime": {
    "value": 1879,
  },
  "intensity": {
    "number": "13",
  },
  "nokhanPresent": {
    "present": "No",
  },
  "numberOfPercussion": {
    "number": "2",
    "value": "Otsuzumi + Kotsuzumi",
  },
  "numberVoices": {
    "number": "2",
    "value": "Jiutai",
  },
  "percussion": {
    "value": "Congruent",
  },
  "play": {
    "value": "kokaji",
  },
  "sectionName": {
    "value": "Ageuta-3",
  },
  "startTime": {
    "value": 1805,
  },
  "text": {
    "value": "Congruent - Hiranori",
  },
  "voice": {
    "value": "Sung - Tsuyogin",
  },
}
`;

exports[`parser processPhrases parse rows of raw data into structured phrases 1`] = `
[
  {
    "beat": {
      "grid": [
        {
          "length": 1,
          "start": 1,
          "style": "normal",
          "text": "1",
          "voices": [],
        },
        {
          "length": 1,
          "start": 3,
          "style": "normal",
          "text": "2",
          "voices": [],
        },
        {
          "length": 1,
          "start": 5,
          "style": "normal",
          "text": "3",
          "voices": [],
        },
        {
          "length": 1,
          "start": 7,
          "style": "normal",
          "text": "4",
          "voices": [],
        },
        {
          "length": 1,
          "start": 9,
          "style": "normal",
          "text": "5",
          "voices": [],
        },
        {
          "length": 1,
          "start": 11,
          "style": "normal",
          "text": "6",
          "voices": [],
        },
        {
          "length": 1,
          "start": 13,
          "style": "normal",
          "text": "7",
          "voices": [],
        },
        {
          "length": 1,
          "start": 15,
          "style": "normal",
          "text": "8",
          "voices": [],
        },
      ],
      "value": "",
    },
    "nohkan": {
      "grid": [],
      "value": "",
    },
    "percussion": {
      "grid": [],
      "value": "tsuzuke",
    },
    "phrase": "1",
    "startTime": {
      "grid": [],
      "value": 1805,
    },
    "syllableNumber": {
      "grid": [
        {
          "length": 1,
          "start": 3,
          "style": "normal",
          "text": "1",
          "voices": [],
        },
        {
          "length": 1,
          "start": 4,
          "style": "normal",
          "text": "2",
          "voices": [],
        },
        {
          "length": 1,
          "start": 6,
          "style": "normal",
          "text": "3",
          "voices": [],
        },
        {
          "length": 1,
          "start": 7,
          "style": "normal",
          "text": "4",
          "voices": [],
        },
        {
          "length": 1,
          "start": 8,
          "style": "normal",
          "text": "5",
          "voices": [],
        },
        {
          "length": 1,
          "start": 10,
          "style": "normal",
          "text": "1",
          "voices": [],
        },
        {
          "length": 1,
          "start": 11,
          "style": "normal",
          "text": "2",
          "voices": [],
        },
        {
          "length": 1,
          "start": 12,
          "style": "normal",
          "text": "3",
          "voices": [],
        },
        {
          "length": 1,
          "start": 13,
          "style": "normal",
          "text": "4",
          "voices": [],
        },
        {
          "length": 1,
          "start": 14,
          "style": "normal",
          "text": "5",
          "voices": [],
        },
      ],
      "value": "",
    },
    "syllableText": {
      "grid": [
        {
          "length": 1,
          "start": 3,
          "style": "normal",
          "text": "tsu",
          "voices": [],
        },
        {
          "length": 1,
          "start": 4,
          "style": "normal",
          "text": "u",
          "voices": [],
        },
        {
          "length": 1,
          "start": 6,
          "style": "normal",
          "text": "ri",
          "voices": [],
        },
        {
          "length": 1,
          "start": 7,
          "style": "normal",
          "text": "ki",
          "voices": [],
        },
        {
          "length": 1,
          "start": 8,
          "style": "normal",
          "text": "no",
          "voices": [],
        },
        {
          "length": 1,
          "start": 10,
          "style": "normal",
          "text": "mi",
          "voices": [],
        },
        {
          "length": 1,
          "start": 11,
          "style": "normal",
          "text": "wo",
          "voices": [],
        },
        {
          "length": 1,
          "start": 12,
          "style": "normal",
          "text": "he",
          "voices": [],
        },
        {
          "length": 1,
          "start": 13,
          "style": "normal",
          "text": "n",
          "voices": [],
        },
        {
          "length": 1,
          "start": 14,
          "style": "normal",
          "text": "ji",
          "voices": [],
        },
        {
          "length": 1,
          "start": 15,
          "style": "normal",
          "text": "(i)",
          "voices": [],
        },
      ],
      "value": "",
    },
    "text": {
      "grid": [],
      "value": "",
    },
    "vocalRange": {
      "grid": [
        {
          "length": 2,
          "start": 3,
          "style": "normal",
          "text": "high",
          "voices": [],
        },
        {
          "length": 1,
          "start": 6,
          "style": "normal",
          "text": "medium",
          "voices": [],
        },
        {
          "length": 1,
          "start": 7,
          "style": "normal",
          "text": "low",
          "voices": [],
        },
        {
          "length": 3,
          "start": 9,
          "style": "normal",
          "text": "low",
          "voices": [],
        },
      ],
      "value": "",
    },
  },
  {
    "beat": {
      "grid": [
        {
          "length": 1,
          "start": 1,
          "style": "normal",
          "text": "1",
          "voices": [],
        },
        {
          "length": 1,
          "start": 3,
          "style": "normal",
          "text": "2",
          "voices": [],
        },
        {
          "length": 1,
          "start": 5,
          "style": "normal",
          "text": "3",
          "voices": [],
        },
        {
          "length": 1,
          "start": 7,
          "style": "normal",
          "text": "4",
          "voices": [],
        },
        {
          "length": 1,
          "start": 9,
          "style": "normal",
          "text": "5",
          "voices": [],
        },
        {
          "length": 1,
          "start": 11,
          "style": "normal",
          "text": "6",
          "voices": [],
        },
        {
          "length": 1,
          "start": 13,
          "style": "normal",
          "text": "7",
          "voices": [],
        },
        {
          "length": 1,
          "start": 15,
          "style": "normal",
          "text": "8",
          "voices": [],
        },
      ],
      "value": "",
    },
    "nohkan": {
      "grid": [],
      "value": "",
    },
    "percussion": {
      "grid": [],
      "value": "tsuzuke",
    },
    "phrase": "2",
    "startTime": {
      "grid": [],
      "value": 1814,
    },
    "syllableNumber": {
      "grid": [
        {
          "length": 1,
          "start": 3,
          "style": "normal",
          "text": "1",
          "voices": [],
        },
        {
          "length": 1,
          "start": 4,
          "style": "normal",
          "text": "2",
          "voices": [],
        },
        {
          "length": 1,
          "start": 6,
          "style": "normal",
          "text": "3",
          "voices": [],
        },
        {
          "length": 1,
          "start": 7,
          "style": "normal",
          "text": "4",
          "voices": [],
        },
        {
          "length": 1,
          "start": 8,
          "style": "normal",
          "text": "5",
          "voices": [],
        },
        {
          "length": 1,
          "start": 10,
          "style": "normal",
          "text": "1",
          "voices": [],
        },
        {
          "length": 1,
          "start": 11,
          "style": "normal",
          "text": "2",
          "voices": [],
        },
        {
          "length": 1,
          "start": 12,
          "style": "normal",
          "text": "3",
          "voices": [],
        },
        {
          "length": 1,
          "start": 14,
          "style": "normal",
          "text": "4",
          "voices": [],
        },
        {
          "length": 1,
          "start": 15,
          "style": "normal",
          "text": "5",
          "voices": [],
        },
      ],
      "value": "",
    },
    "syllableText": {
      "grid": [
        {
          "length": 1,
          "start": 3,
          "style": "normal",
          "text": "tsu",
          "voices": [],
        },
        {
          "length": 1,
          "start": 4,
          "style": "normal",
          "text": "u",
          "voices": [],
        },
        {
          "length": 1,
          "start": 6,
          "style": "normal",
          "text": "ri",
          "voices": [],
        },
        {
          "length": 1,
          "start": 7,
          "style": "normal",
          "text": "ki",
          "voices": [],
        },
        {
          "length": 1,
          "start": 8,
          "style": "normal",
          "text": "no",
          "voices": [],
        },
        {
          "length": 1,
          "start": 10,
          "style": "normal",
          "text": "mi",
          "voices": [],
        },
        {
          "length": 1,
          "start": 11,
          "style": "normal",
          "text": "wo",
          "voices": [],
        },
        {
          "length": 1,
          "start": 12,
          "style": "normal",
          "text": "he",
          "voices": [],
        },
        {
          "length": 1,
          "start": 14,
          "style": "normal",
          "text": "n",
          "voices": [],
        },
        {
          "length": 1,
          "start": 15,
          "style": "normal",
          "text": "ji",
          "voices": [],
        },
      ],
      "value": "",
    },
    "text": {
      "grid": [],
      "value": "",
    },
    "vocalRange": {
      "grid": [],
      "value": "high",
    },
  },
]
`;
